<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

	<LinearLayout  
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"	   
	    android:padding="5dip">
			
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_gravity="center"			
			android:layout_marginBottom="5dip"
			android:text="@string/language_dialog"
			android:textSize="26sp"	/>
		
	    <RadioGroup
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	        
	        <RadioButton
	            android:id="@+id/engDefault"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/eng" />
	
	        <RadioButton
	            android:id="@+id/rusDefault"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/rus" />
	
	        <RadioButton
	            android:id="@+id/hebDefault"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/heb" />
	        
	    </RadioGroup>
		    
		
		<Button  
				android:layout_width="120dp"
			    android:layout_height="50dp"
			    android:background="@drawable/button"
				android:text="@string/set"
				android:textColor="@color/white"
				 android:textSize="20sp"
				android:id="@+id/btnSet"
				android:layout_gravity="center_horizontal"
				android:layout_margin="15dp" />		
	
	</LinearLayout>

</RelativeLayout>
